unpackaged/main/default/objects/genesis__Lending_Calculator__c/genesis__Lending_Calculator__c.object-meta.xml
<CustomObject>
    <label>Lending_Calculator</label>
    <nameField>
        <label>Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lending_Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>