unpackaged/main/default/objects/genesis__Lending_Calculator__c/fields/genesis__Due_Day__c.field-meta.xml
<CustomField>
    <fullName>genesis__Due_Day__c</fullName>
    <description>Due Day by default will have the value of the Expected First Payment Date Day value.</description>
    <inlineHelpText>Due Day by default will have the value of the Expected First Payment Date Day value.</inlineHelpText>
    <label>Due_Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>