unpackaged/main/default/objects/genesis__Lending_Calculator__c/fields/genesis__Payment_Amount_2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Amount_2_Start_Date__c</fullName>
    <description>Date on which payment amount is changed.</description>
    <label>Payment Amount 2 Start date</label>
    <type>Date</type>
</CustomField>