unpackaged/main/default/objects/genesis__Lending_Calculator__c/fields/genesis__Principal_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Principal_Payment_Amount__c</fullName>
    <label>Principal Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>